--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
     <!-- Bootstrap Nav-bar -->
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand text-black" href="#">Kai & Associates</span></a>
+        <a class="navbar-brand text-black" href="#"
+          >Kai <span class="logo"> & Associates</span></a
+        >
         <button
-          class="navbar-toggler "
+          class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
@@ -43,9 +45,23 @@
             </li>
             <li class="nav-item">
               <a class="nav-link active text-black" aria-current="page" href="#"
-                >About</a
+                >Our Firm</a
               >
             </li>
+            <li class="nav-item dropdown"> <!-- Dropdown structure -->
+              <a class="nav-link dropdown-toggle active text-black" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Practice Areas
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown"> <!-- Dropdown menu -->
+                <li><a class="dropdown-item" href="#">Persoanl Injury</a></li> <!-- Sub-links -->
+                <li><a class="dropdown-item" href="#">Capital Market Penalty</a></li>
+                <li><a class="dropdown-item" href="#">Tax criminal</a></li>
+                <li><a class="dropdown-item" href="#">Witness Asssitance</a></li>
+                <li><a class="dropdown-item" href="#">Economic Criminal Law</a></li>
+                <li><a class="dropdown-item" href="#">General Criminal Law</a></li>
+              </ul>
+            </li>
+            
             <li class="nav-item">
               <a class="nav-link active text-black" aria-current="page" href="#"
                 >contact</a
@@ -56,15 +72,123 @@
       </div>
     </nav>
     <!-- End of Nav-bar -->
-<!-- Home Content -->
-<div class="home">
-<div class="home-content">
-<h1>Your trusted Kenyan Law Firm <br> based in Kilifi-County</h1>
-<p>We provide our clients with high-quality legal services, excellent customer <br> service and creative approaches to addressing legal issues.</p>
-<a href="" cta><button>Get in Touch</button></a>
-</div>
-
-
+    <!-- Home Content -->
+    <div class="home">
+      <div class="home-content">
+        <h1>
+          Your trusted Kenyan Law Firm <br />
+          based in Kilifi-County
+        </h1>
+        <p>
+          We provide our clients with high-quality legal services, excellent
+          customer <br />
+          service and creative approaches to addressing legal issues.
+        </p>
+        <a href="" cta><button>CONTACT US</button></a>
+      </div>
+    </div>
+    <div class="bg-color">
+      <div class="practice-area">
+        <div class="about">
+          <h3>ABOUT US</h3>
+          <h3>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Accusantium, ea.
+          </h3>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit
+            facere ipsum minima, tempore esse sunt adipisci necessitatibus
+            fugiat vitae qui.
+          </p>
+          <a href="" class="btn"><button>LEARN MORE</button></a>
+        </div>
+        <div class="about-content">
+          <div class="content">
+            <img src="img/scale.svg" alt="" />
+            <h1>Our Service & Valuation</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum,
+              possimus!
+            </p>
+          </div>
+          <div class="content">
+            <img src="img/brain.svg" alt="" />
+            <h1>Legal Analysis</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum,
+              possimus!
+            </p>
+          </div>
+          <div class="content">
+            <img src="img/gavel.svg" alt="" />
+            <h1>Case Investigation</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum,
+              possimus!
+            </p>
+          </div>
+          <div class="content">
+            <img src="img/building.svg" alt="" />
+            <h1>Search Directory</h1>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum,
+              possimus!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- areas of expertise -->
+    <div class="expertise">
+      <div class="heading">
+        <h1>Practice Areas</h1>
+      </div>
+      <div class="areas">
+        <div class="areas-1">
+          <img src="img/scale.svg" alt="" />
+          <h4>Tax Criminal</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, cum?
+          </p>
+        </div>
+        <div class="areas-1">
+          <img src="img/scale.svg" alt="" />
+          <h4>Tax Criminal</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, cum?
+          </p>
+        </div>
+        <div class="areas-1">
+          <img src="img/scale.svg" alt="" />
+          <h4>Tax Criminal</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, cum?
+          </p>
+        </div>
+        <div class="areas-1">
+          <img src="img/scale.svg" alt="" />
+          <h4>Tax Criminal</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, cum?
+          </p>
+        </div>
+        <div class="areas-1">
+          <img src="img/scale.svg" alt="" />
+          <h4>Tax Criminal</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, cum?
+          </p>
+        </div>
+        <div class="areas-1">
+          <img src="img/scale.svg" alt="" />
+          <h4>Tax Criminal</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, cum?
+          </p>
+        </div>
+      </div>
+    </div>
+    <!-- end -->
     <!-- Bootstrap Javascript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
